SERVER-48144 stop acquiring waitUntilDurable's barrier mutex before taking locks to update the oplogTruncateAfterPoint